--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.stx.xhb.dmgameapp.main.ForumFragment">
+    tools:context=".ui.main.ForumFragment">
 
     <!-- 标题 -->
     <include layout="@layout/layout_title"/>
