--- a/app/src/main/res/layout/list_item_forum.xml
+++ b/app/src/main/res/layout/list_item_forum.xml
@@ -1,7 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content"
+              android:background="@color/colorWhite"
+              android:gravity="center_vertical"
+              android:padding="12dp">
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:background="@drawable/shape_image_storke"
+        android:padding="1dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/product_default"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="12dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:text="《NBA2K18》"
+            android:textColor="@color/color_1c1c1c"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:text="今日12086"
+                android:textColor="@color/color_888888"
+                android:textSize="12sp"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:text="排名：1"
+                android:textColor="@color/color_888888"
+                android:textSize="12sp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/btn_collect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/selector_gray_rec_border_pandind_6dp"
+        android:text="收藏"/>
 
 </LinearLayout>
